[package]
name = "eip-utils"
version = "0.1.1"
authors = ["Abdelhamid Bakhta <abdelhamid.bakhta@consensys.net>"]
edition = "2018"
description = "Ethereum Improvement Proposal helpers."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.0"
num-traits = "0.2.14"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"] }
rlp = "0.5.0"